--- a/style.css
+++ b/style.css
@@ -6,15 +6,35 @@
     font-family: "Inter", sans-serif;
     box-sizing: border-box;
     font-weight: 500;
+    text-decoration: none;
 }
 
-html, body {
+html,
+body {
     width: 100%;
-    background-color:#000;
+    background-color: #000;
     color: #fff;
 }
-a{
+
+a {
     color: #fff;
+    display: inline-block;
+
+}
+
+.x-axis-line{
+    width: 0;
+    height: 2px;
+    background-color: #fff;
+    border-radius: 5px;
+    opacity: 0;
+    transition: 0.3s;
+    margin-top: 1px;
+}
+a:hover .x-axis-line{
+    width: 100%;
+    transition: 0.3s;
+    opacity: 1;
 }
 #minicircle {
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
@@ -203,11 +223,13 @@ a{
     text-decoration: none;
     transition: 0.1s;
 }
-#textabout a:hover{
+
+#textabout a:hover {
     color: #000;
     background-color: #fff;
     transition: 0.1s;
 }
+
 #subscribe {
     padding: 20px 30px;
     padding-bottom: 7vw;
