--- a/style.css
+++ b/style.css
@@ -167,6 +167,18 @@ a:hover .x-axis-line{
     border-top: 1px solid #888;
 }
 
+.elem button{
+    padding: 5px 8px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    cursor: pointer;
+}
+
+.projects-links{
+    width: fit-content;
+    position: relative;
+}
+
 .elem h1 {
     text-transform: uppercase;
     font-size: 7.6vw;
